<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    tools:context=".activities.ReceiptActivity"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbarStyle="outsideOverlay">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_micro"
            android:layout_marginTop="@dimen/spacing_micro"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="0dp"
            app:cardElevation="4dp"
            app:contentPaddingBottom="@dimen/spacing_normal"
            app:contentPaddingLeft="@dimen/activity_horizontal_margin"
            app:contentPaddingRight="@dimen/activity_horizontal_margin"
            app:contentPaddingTop="@dimen/spacing_normal">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TableRow android:gravity="center">

                    <TextView
                        android:id="@+id/tvBillType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/spacing_double"
                        android:drawableEnd="@mipmap/jibit"
                        android:gravity="center"
                        android:text="@string/receipt"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/spacing_normal">

                    <TextView
                        android:id="@+id/tvState"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:paddingStart="@dimen/spacing_normal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:background="@android:drawable/divider_horizontal_bright" />

                <TableRow android:layout_marginTop="@dimen/spacing_normal">

                    <TextView
                        android:id="@+id/tvTrackingCode"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end|center_vertical"
                        android:paddingEnd="@dimen/spacing_normal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    <TextView
                        android:id="@+id/tvTrackingCodeTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end|center_vertical"
                        android:paddingStart="@dimen/spacing_normal"
                        android:text="@string/tracking_code"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@android:color/darker_gray" />


                </TableRow>

                <View
                    android:id="@+id/paymentId_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:background="@android:drawable/divider_horizontal_bright" />

                <TableRow android:layout_marginTop="@dimen/spacing_normal">
                    <TextView
                        android:id="@+id/tvAmount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right|center_vertical"
                        android:paddingRight="@dimen/spacing_normal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/counter_green_500" />
                    <TextView
                        android:id="@+id/tvAmountTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end|center_vertical"
                        android:paddingStart="@dimen/spacing_normal"
                        android:text="@string/amount"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@android:color/darker_gray" />

                </TableRow>

            </TableLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>

    <include layout="@layout/toolbar" />

</LinearLayout>